--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.2",
+    "mongoose": "^5.6.12",
     "mysql": "^2.17.1",
     "supervisor": "^0.12.0"
   }
